src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/instanceInt.deca
// Description:
//    instance of int
//
// Resultats:
//    Erreur contextuelle ligne 12
//    int n'est pas une instance de classe
class A{
    Object o = new A();
}
{
    A a = new A();
    boolean x = a.o instanceof int;
}
